@@ -29,4 +29,4 @@ feeds = http://gatoloko.homelinux.org/index.php?q=rss.xml,http://www.slashdot.co
 [autosend]
 activo = 1
 directorio = autosend
-disparador = ^!autoenvio
+disparador = !archivos
